k8s_manifest/code_server_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-ocb-deployment
  namespace: ns-code-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: code-server-ocb
  template:
    metadata:
      labels:
        app: code-server-ocb
    spec:
      hostname: ocb
      containers:
        - name: code-server-ocb
          image: codercom/code-server:latest
          ports:
            - containerPort: 8080
            - containerPort: 443
          imagePullPolicy: Always
          volumeMounts:
          - name: ocb
            mountPath: /home/coder/project
      #imagePullSecrets:
      #  - name: my-secret
      volumes:
        - name: ocb
          #persistentVolumeClaim:
            #claimName: jenkins-leader-pvc
          hostPath:
            path: /home/ocb_vscode
            type: Directory
      nodeSelector:
        kubernetes.io/hostname: och1
