k8s_manifest/code_server_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-ocb-svc
  labels:
    app: code-server-ocb-svc
  namespace: ns-code-server
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: code-server-ocb
  type: NodePort
