k8s_manifest/code_server_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ocb-ingress
  namespace: ns-code-server
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - host: opyter.iptime.org
    http:
      paths:
      - path: /ocbvscode/*
        pathType: Prefix
        backend:
          service:
            name: code-server-ocb-svc
            port:
              number: 80
